# 2048-game---project

./: CMakeLists.txt  drawboard.c  gameover.c  header.h  main.c  movment.c  spawntile.c  test  what to do
include/: header.h
src/: drawboard.c  gameover.c  main.c  movment.c  rayEnd.c  rayanimtion.c  rayaudio.c  raycolor.c  raydraw.c  raystartingmenu.c  runGame.c  spawntile.c
